@@ -6,7 +6,7 @@
 // Input FASTQ reads must have Sanger quality scores and be labelled by sample.
 // Note: the code for calculating sequence statistics assumes that the sequences
 // are NOT wrapped.
-// Usage example: bpipe run pipeline_QA.groovy sediments.fastq
+// Usage example: bpipe run hitman_deploy sediments.fastq
 
 // Options:
 
@@ -17,14 +17,16 @@ SKIP_STATS=0
 LIB_ADAPTERS=""
 
 // Quality score below which 3' end read truncation should start (going from 5' to 3')
-TRIM_QUAL=13
-// Q20: 1%, Q19: 1.3%, Q18: 1.6%, Q17: 2%, Q16: 2.5%, Q15: 3.2%, Q14: 4%,
-// Q13: 5%, Q12: 6.3%, Q11: 7.9%, Q10: 10%
+TRIM_QUAL=7
+// Suggest Q7 for basic reads, then Q16 for OTU determination
+// Q20 1%  , Q19 1.3%, Q18 1.6%, Q17 2%, Q16 2.5%, Q15 3.2%, Q14 4%, Q13 5%,
+// Q12 6.3%, Q11 7.9%, Q10 10% , Q9 13%, Q8   16%, Q7   20%, Q6 25%, Q5 32%
 // Ambiguities such as N typically have Q0 with 454, Q2 with Illumina 1.8+. A
 // Q13 threshold eliminates Ns and other low quality bases from the reads.
 
 // Filter out reads with over this % of expected errors (based on quality scores)
 EE_PERC=3.0
+// Suggest 3% for basic reads, then 0.5% for OTU determination
 
 // Flag to skip the Acacia denoising step
 SKIP_DENOISING=0
@@ -34,14 +36,6 @@ TRIM_LEN=250
 // 250bp captures the whole V6-V7 region using the 926F-1392R primers (V6-V8)
 
 ////////////////////////////////////////////////////////////////////////////////
-
-
-//////////
-// TODO
-// * Use very clean reads (trim_qual and ee_filt) to determine OTUs,
-//   but try to classify even not so clean reads (ee_filt only) into OTUs.
-//   This means implementing ee_filt before trim_qual, saving READS into variable
-//////////
 
 
 about title: "hitman_deploy - Quality assurance for amplicons reads"
